# tn-basics

./: Conventions.md  CourseContents.md  README.md
julia/: 1_svd.jl  2_image-compression.jl  3_tensor.jl  4_contraction.jl  5_mps2statevector.jl  6_statevector2mps.jl  7_tebd.jl  8_function2qtt.jl  9_finite-difference.jl  9_function2qtt.jl  Project.toml
python/: 1_svd.py  2_image-compression.py  3_tensor.py  4_contraction.py  5_mpi2statevector.py  5_mps2statevector.py  6_statevector2mps.py  8_function2qtt.py  9_finite-difference.py  9_function2qtt.py
rust/: Cargo.toml
rust/src/: lib.rs  plot.rs
