[package]
name = "tn-basics"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.0", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = { version = "0.17", features = ["openblas-system"] }
ndarray-einsum = "0.8"
image = "0.25"
plotters = "0.3"
rand = "0.8"

[[bin]]
name = "1_svd"

[[bin]]
name = "2_image-compression"

[[bin]]
name = "3_tensor"

[[bin]]
name = "4_contraction"

[[bin]]
name = "5_mps2statevector"

[[bin]]
name = "6_statevector2mps"

[[bin]]
name = "9_function2qtt"
