[package]
name = "tn-basics"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.0", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = { version = "0.17", features = ["openblas-system"] }
ndarray-einsum = "0.8"
image = "0.25"
plotters = "0.3"
rand = "0.8"
anyhow = "1.0.100"
num-complex = "0.4"

[lints.rust]
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"

[lints.clippy]
pedantic = "warn"
